--- a/nb/sql.ipynb
+++ b/nb/sql.ipynb
@@ -127,7 +127,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Please write your analysis here"
+    "# TODO: Please write your analysis here\n",
+    "# hello world"
    ]
   }
  ],
