--- a/nb/sql_test.ipynb
+++ b/nb/sql_test.ipynb
@@ -146,7 +146,8 @@
    "outputs": [],
    "source": [
     "# TODO: Please write your analysis here\n",
-    "# hello world"
+    "# hello world\n",
+    "# hello 2"
    ]
   }
  ],
