--- a/nb/sql copy.ipynb
+++ b/nb/sql copy.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2acc6171-a93c-4fc5-bb8d-7f63daa2aab5",
    "metadata": {
     "is_executing": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'requests'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mrequests\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msqlalchemy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_engine\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
+     ]
+    }
+   ],
    "source": [
     "import json, requests, time\n",
     "from sqlalchemy import create_engine\n",
@@ -22,10 +34,8 @@
    "metadata": {},
    "source": [
     "# Data\n",
-    "\n",
     "Every time a user opens a mobile app, an auction is going on behind the scenes. The highest bidder gets to advertise his ad to the user.\n",
-    "\n",
-    "## Auctions Table\n"
+    "## Auctions Table"
    ]
   },
   {
@@ -48,8 +58,7 @@
    "metadata": {},
    "source": [
     "## App Vectors table\n",
-    "\n",
-    "We've gathered the first few sentences from the app store description and embedded it with a [model](https://huggingface.co/mixedbread-ai/mxbai-embed-large-v1)\n"
+    "We've gathered the first few sentences from the app store description and embedded it with a [model](https://huggingface.co/mixedbread-ai/mxbai-embed-large-v1)"
    ]
   },
   {
@@ -81,7 +90,7 @@
    "id": "2fac0d2f",
    "metadata": {},
    "source": [
-    "We can use the `<=>` operator to run vector search within the database\n"
+    "We can use the `<=>` operator to run vector search within the database"
    ]
   },
   {
@@ -113,17 +122,14 @@
    "metadata": {},
    "source": [
     "# What you need to do\n",
-    "\n",
     "## The hypothesis\n",
-    "\n",
     "We assume that apps with similar desciptions, would have a similar asking price in the auctions (`sentPrice` column).\n",
     "\n",
     "Use cosine similarity (`<=>`) on the embeddings to find similar apps, and any statistical tools you find suitable to prove or disprove this hypothesis.\n",
     "\n",
     "## Is it consistent?\n",
-    "\n",
-    "There are several other features in the auctions table (such as `CountryCode` and `OS`),\n",
-    "Do your findings hold for those as well?\n"
+    "There are several other features in the auctions table (such as `CountryCode` and `OS`), \n",
+    "Do your findings hold for those as well?"
    ]
   },
   {
@@ -135,7 +141,7 @@
    "source": [
     "# TODO: Please write your analysis here\n",
     "# hello world\n",
-    "# hello 2"
+    "# wowl"
    ]
   }
  ],
