--- a/nb/sql.ipynb
+++ b/nb/sql.ipynb
@@ -34,8 +34,10 @@
    "metadata": {},
    "source": [
     "# Data\n",
+    "\n",
     "Every time a user opens a mobile app, an auction is going on behind the scenes. The highest bidder gets to advertise his ad to the user.\n",
-    "## Auctions Table"
+    "\n",
+    "## Auctions Table\n"
    ]
   },
   {
@@ -58,7 +60,8 @@
    "metadata": {},
    "source": [
     "## App Vectors table\n",
-    "We've gathered the first few sentences from the app store description and embedded it with a [model](https://huggingface.co/mixedbread-ai/mxbai-embed-large-v1)"
+    "\n",
+    "We've gathered the first few sentences from the app store description and embedded it with a [model](https://huggingface.co/mixedbread-ai/mxbai-embed-large-v1)\n"
    ]
   },
   {
@@ -90,7 +93,7 @@
    "id": "2fac0d2f",
    "metadata": {},
    "source": [
-    "We can use the `<=>` operator to run vector search within the database"
+    "We can use the `<=>` operator to run vector search within the database\n"
    ]
   },
   {
@@ -122,25 +125,29 @@
    "metadata": {},
    "source": [
     "# What you need to do\n",
+    "\n",
     "## The hypothesis\n",
+    "\n",
     "We assume that apps with similar desciptions, would have a similar asking price in the auctions (`sentPrice` column).\n",
     "\n",
     "Use cosine similarity (`<=>`) on the embeddings to find similar apps, and any statistical tools you find suitable to prove or disprove this hypothesis.\n",
     "\n",
     "## Is it consistent?\n",
-    "There are several other features in the auctions table (such as `CountryCode` and `OS`), \n",
-    "Do your findings hold for those as well?"
+    "\n",
+    "There are several other features in the auctions table (such as `CountryCode` and `OS`),\n",
+    "Do your findings hold for those as well?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "99b61a69-83f0-4325-aeb7-9c0bfe70a79e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Please write your analysis here\n",
-    "# hello world"
+    "# hello world\n",
+    "# wowlbananan"
    ]
   }
  ],
