--- a/nb/sql.ipynb
+++ b/nb/sql.ipynb
@@ -145,9 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Please write your analysis here\n",
-    "# hello world\n",
-    "# wowlbananan"
+    "# TODO: Please write your analysis here\n"
    ]
   }
  ],
