--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -381,6 +381,8 @@
     "(a) Feature engineering - I will transform the timestamp variable into year,month, day, hour, minute,second and day_of_week.\n",
     "\n",
     "(b) I will randomly some of the low appearance apps to the validation and testing data \n",
+    "\n",
+    "(c) \n",
     "\n"
    ]
   },
@@ -441,7 +443,7 @@
     "\n",
     "    return validation_apps, test_apps\n",
     "\n",
-    "validation_apps, test_apps = select_apps_for_validation_and_test(grouped_stats, apps_for_validation, apps_for_test)\n"
+    "validation_apps, test_apps = select_apps_for_validation_and_test(grouped_stats, apps_for_validation, apps_for_test)"
    ]
   },
   {
