--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -146,13 +146,17 @@
    "source": [
     "# let's install some additional libraries in order to visualize the data and compare different models\n",
     "!pip install scikit-learn\n",
+    "!pip install xgboost\n",
     "!pip install seaborn\n",
     "\n",
-    "# import the necessary libraries\n",
-    "import numpy as np \n",
+    "# import the required libraries\n",
     "import itertools\n",
+    "import numpy as np \n",
+    "import xgboost as xgb\n",
     "import seaborn as sns # for data visualization\n",
     "import matplotlib.pyplot as plt \n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
     "from sklearn.metrics.pairwise import cosine_similarity # for computing cosine similarity\n",
     "from sklearn.model_selection import train_test_split # for splitting the data into training, validation and test sets\n",
     "\n",
@@ -187,7 +191,7 @@
     "\n",
     "(6) Testing the contribution of additional features\n",
     "\n",
-    "(7) Conclusions :)\n",
+    "(7) Conclusions\n",
     "\n",
     "For that, we can create a confusion matrix which contains the cosine similarity values.\n"
    ]
@@ -350,22 +354,22 @@
    "source": [
     "# ------------------- (3) Experiment design -------------------\n",
     "\n",
-    "I would suggest training a baseline model aimed at predicting the sentPrice target variable.\n",
+    "* I would suggest training a baseline model aimed at predicting the sentPrice target variable.\n",
     "Input - bids' timestamp.\n",
     "Output - sentPrice.\n",
     "\n",
-    "The baseline model would be compared with a model trained on additional features that reflect the app embeddings.\n",
+    "* The baseline model would be compared with a model trained on additional features that reflect the app embeddings.\n",
     "Input - bids' timestamp, embeddings (after some standard clustering).\n",
     "Output - sentPrice.\n",
     "\n",
-    "The model which will use me is the popular XGBOOST - this model known for it's powerful predictive and can also provide us insights regarding the feature importance\n",
+    "* The model which will use me is the popular XGBOOST - this model known for it's powerful predictive and can also provide us insights regarding the feature importance\n",
     "Evaluation metric - RMSE.\n",
     "\n",
-    "If the baseline_RMSE < model_with_embedding_RMSE, then the hypothesis would be confirmed.\n",
+    "* If the baseline_RMSE < model_with_embedding_RMSE, then the hypothesis would be confirmed.\n",
     "\n",
     "# note\n",
     "\n",
-    "Since there are some apps with low represntation, I would suggest randomly assign some of them to the validation and testing sets.\n",
+    "* Since there are some apps with low represntation, I would suggest randomly assign some of them to the validation and testing sets.\n",
     "This would prevent data leakage when performing the embeddings clustering.\n"
    ]
   },
@@ -454,40 +458,45 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Split the dataset into 90% training and 10% testing sets\n",
-    "# and I would randomly select 3 apps \n",
-    "train_data, test_data = train_test_split(df, test_size=0.15, random_state=42)\n",
+    "def prepare_data_for_training(df,validation_apps,test_apps):\n",
+    "    \n",
+    "    # Split the dataset into 80% training and 20% temporary sets\n",
+    "    X_train_temp, X_test = train_test_split(df, test_size=0.2, random_state=42)\n",
     "\n",
-    "#\n",
-    "# I want to make sure we test our model on apps which are not in the training set\n",
-    "# For this I would randomly select 4 apps which their % of data is below 5\n",
+    "    # Further split the temporary set into 70% training and 10% validation sets\n",
+    "    X_train, X_val = train_test_split(X_train_temp, test_size=0.125, random_state=42)\n",
+    "\n",
+    "    # move the validation and test apps to the validation and test sets\n",
+    "    # Filter records associated with validation apps from the training set\n",
+    "    train_data_validation_apps = X_train[X_train['bundleId'].isin(validation_apps)]\n",
+    "    X_train = X_train[~X_train['bundleId'].isin(validation_apps)]\n",
+    "    X_val = pd.concat([X_val, train_data_validation_apps])\n",
+    "\n",
+    "    # Filter records associated with test apps from the training set\n",
+    "    train_data_test_apps = X_train[X_train['bundleId'].isin(test_apps)]\n",
+    "    X_train = X_train[~X_train['bundleId'].isin(test_apps)]\n",
+    "    X_test = pd.concat([X_test, train_data_test_apps])\n",
+    "\n",
+    "    # Shuffling the set to ensure randomness\n",
+    "    X_train = X_train.sample(frac=1, random_state=42)\n",
+    "    X_val = X_val.sample(frac=1, random_state=42)\n",
+    "    X_test = X_test.sample(frac=1, random_state=42)\n",
+    "\n",
+    "    # Calculate the proportion of each set\n",
+    "    train_proportion = len(X_train) / len(df)\n",
+    "    val_proportion = len(X_val) / len(df)\n",
+    "    test_proportion = len(X_test) / len(df)\n",
+    "\n",
+    "    print(\"Proportion of training data:\", round(train_proportion,4)*100)\n",
+    "    print(\"Proportion of validation data:\", round(val_proportion,4)*100)\n",
+    "    print(\"Proportion of test data:\", round(test_proportion,4)*100)\n",
+    "\n",
+    "    return X_train, X_val, X_test\n",
     "\n",
     "\n",
-    "# Filter records associated with new apps from the training set\n",
-    "train_data_new_apps = train_data[train_data['bundleId'].isin(random_apps)]\n",
-    "\n",
-    "# Remove the filtered records from the training set\n",
-    "train_data = train_data[~train_data['bundleId'].isin(random_apps)]\n",
-    "\n",
-    "# Concatenate the existing testing set with records associated with new apps\n",
-    "test_data = pd.concat([test_data, train_data_new_apps])\n",
-    "\n",
-    "# Shuffle the testing set to ensure randomness\n",
-    "test_data = test_data.sample(frac=1, random_state=42)\n",
-    "\n",
-    "# Verify the distribution of apps in the training set\n",
-    "print(\"apps in training set:\", train_data['bundleId'].unique())\n",
-    "\n",
-    "# Verify the distribution of apps in the testing set\n",
-    "print(\"apps in testing set:\", test_data['bundleId'].unique())\n",
-    "\n",
-    "# Check the percentage of data after this modification\n",
-    "# Calculate proportions\n",
-    "train_proportion = len(train_data) / len(df)\n",
-    "test_proportion = len(test_data) / len(df)\n",
-    "\n",
-    "print(\"Proportion of training data:\", round(train_proportion,4)*100)\n",
-    "print(\"Proportion of testing data:\", round(test_proportion,4)*100)\n"
+    "# Select specific columns for training\n",
+    "columns_to_use = ['bidFloorPrice', 'year', 'month', 'day', 'hour', 'minute', 'second', 'day_of_week']\n",
+    "X_train, X_val, X_test = prepare_data_for_training(df[columns_to_use])"
    ]
   },
   {
@@ -498,19 +507,11 @@
    "outputs": [],
    "source": [
     "# train an XGBOOST for this task\n",
-    "!pip install xgboost\n",
-    "import xgboost as xgb\n",
-    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "# Select specific columns for training\n",
-    "columns_to_use = ['bidFloorPrice', 'year', 'month', 'day', 'hour', 'minute', 'second', 'day_of_week']\n",
+    "\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(df[columns_to_use], df['sentPrice'], test_size=0.2, random_state=42)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "# Initialize XGBoost Regressor\n",
     "model = xgb.XGBRegressor()\n",
@@ -546,11 +547,6 @@
    "outputs": [],
    "source": [
     "# Now, lets create clusters of the embeddings\n",
-    "#def clustter_embeddings(cos_sim_df):\n",
-    "    # \n",
-    "\n",
-    "\n",
-    "# Print the modified DataFrame\n",
     "\n",
     "def cluster_apps_by_similarity(cos_sim_df):\n",
     "    clusters = {}  # Dict to store clusters\n",
@@ -580,7 +576,6 @@
     "\n",
     "    return clusters\n",
     "        \n",
-    "\n",
     "cluster_apps_by_similarity(cos_sim_df)"
    ]
   },
