update the training function

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -354,23 +354,23 @@
    "source": [
     "# ------------------- (3) Experiment design -------------------\n",
     "\n",
-    "* I would suggest training a baseline model aimed at predicting the sentPrice target variable.\n",
-    "Input - bids' timestamp.\n",
-    "Output - sentPrice.\n",
+    "- I would suggest training a baseline model aimed at predicting the sentPrice target variable.\n",
+    "  Input - bids' timestamp.\n",
+    "  Output - sentPrice.\n",
     "\n",
-    "* The baseline model would be compared with a model trained on additional features that reflect the app embeddings.\n",
-    "Input - bids' timestamp, embeddings (after some standard clustering).\n",
-    "Output - sentPrice.\n",
+    "- The baseline model would be compared with a model trained on additional features that reflect the app embeddings.\n",
+    "  Input - bids' timestamp, embeddings (after some standard clustering).\n",
+    "  Output - sentPrice.\n",
     "\n",
-    "* The model which will use me is the popular XGBOOST - this model known for it's powerful predictive and can also provide us insights regarding the feature importance\n",
-    "Evaluation metric - RMSE.\n",
+    "- The model which will use me is the popular XGBOOST - this model known for it's powerful predictive and can also provide us insights regarding the feature importance\n",
+    "  Evaluation metric - RMSE.\n",
     "\n",
-    "* If the baseline_RMSE < model_with_embedding_RMSE, then the hypothesis would be confirmed.\n",
+    "- If the baseline_RMSE < model_with_embedding_RMSE, then the hypothesis would be confirmed.\n",
     "\n",
     "# note\n",
     "\n",
-    "* Since there are some apps with low represntation, I would suggest randomly assign some of them to the validation and testing sets.\n",
-    "This would prevent data leakage when performing the embeddings clustering.\n"
+    "- Since there are some apps with low represntation, I would suggest randomly assign some of them to the validation and testing sets.\n",
+    "  This would prevent data leakage when performing the embeddings clustering.\n"
    ]
   },
   {
@@ -384,10 +384,9 @@
     "\n",
     "(a) Feature engineering - I will transform the timestamp variable into year,month, day, hour, minute,second and day_of_week.\n",
     "\n",
-    "(b) I will randomly some of the low appearance apps to the validation and testing data \n",
+    "(b) I will randomly some of the low appearance apps to the validation and testing data\n",
     "\n",
-    "(c) \n",
-    "\n"
+    "(c)\n"
    ]
   },
   {
@@ -482,6 +481,11 @@
     "    X_val = X_val.sample(frac=1, random_state=42)\n",
     "    X_test = X_test.sample(frac=1, random_state=42)\n",
     "\n",
+    "    # Extract the target \n",
+    "    y_train = X_train.pop('bidPrice')\n",
+    "    y_val = X_val.pop('bidPrice')\n",
+    "    y_test = X_test.pop('bidPrice')\n",
+    "\n",
     "    # Calculate the proportion of each set\n",
     "    train_proportion = len(X_train) / len(df)\n",
     "    val_proportion = len(X_val) / len(df)\n",
@@ -491,12 +495,20 @@
     "    print(\"Proportion of validation data:\", round(val_proportion,4)*100)\n",
     "    print(\"Proportion of test data:\", round(test_proportion,4)*100)\n",
     "\n",
-    "    return X_train, X_val, X_test\n",
+    "    return X_train, X_val, X_test, y_train, y_val, y_test\n",
     "\n",
     "\n",
     "# Select specific columns for training\n",
     "columns_to_use = ['bidFloorPrice', 'year', 'month', 'day', 'hour', 'minute', 'second', 'day_of_week']\n",
-    "X_train, X_val, X_test = prepare_data_for_training(df[columns_to_use])"
+    "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df[columns_to_use])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "476a6001",
+   "metadata": {},
+   "source": [
+    "# Train the XGBOOST model without considering the apps' embeddings\n"
    ]
   },
   {
@@ -506,37 +518,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train an XGBOOST for this task\n",
+    "def train_model(X_train, X_val, X_test, y_train, y_val, y_test):\n",
+    "    \n",
+    "    # Init the XGBoost model\n",
+    "    model = xgb.XGBRegressor()\n",
     "\n",
+    "    # Train the model\n",
+    "    model.fit(X_train, y_train)\n",
     "\n",
+    "    # Make predictions on the training set\n",
+    "    y_pred_train = model.predict(X_train)\n",
+    "    training_rmse = np.sqrt(mean_squared_error(y_train, y_pred_train))\n",
+    "    print(\"Training Root Mean Squared Error:\", training_rmse)\n",
     "\n",
-    "# Split the dataset into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(df[columns_to_use], df['sentPrice'], test_size=0.2, random_state=42)\n",
+    "    # Make predictions on the validation set\n",
+    "    y_pred_val = model.predict(X_val)\n",
     "\n",
-    "# Initialize XGBoost Regressor\n",
-    "model = xgb.XGBRegressor()\n",
+    "    # Evaluate the model on validation set\n",
+    "    val_rmse = np.sqrt(mean_squared_error(y_val, y_pred_val))\n",
+    "    print(\"Validation Root Mean Squared Error:\", val_rmse)\n",
     "\n",
-    "# Train the model\n",
-    "model.fit(X_train, y_train)\n",
+    "    # Make predictions on the testing set\n",
+    "    y_pred_test = model.predict(X_test)\n",
     "\n",
-    "# Make predictions on the testing set\n",
-    "y_pred = model.predict(X_test)\n",
+    "    # Evaluate the model on test set\n",
+    "    test_rmse = np.sqrt(mean_squared_error(y_test, y_pred_test))\n",
+    "    print(\"Test Root Mean Squared Error:\", test_rmse)\n",
     "\n",
-    "# Evaluate the model\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "print(\"Mean Squared Error:\", mse)\n",
-    "\n",
-    "# Evaluate the model accuary on this data:\n",
-    "train_data_new_apps[columns_to_use],train_data_new_apps['sentPrice']\n",
-    "\n",
-    "# Make predictions on the testing set\n",
-    "y_pred_new_apps = model.predict(train_data_new_apps[columns_to_use])\n",
-    "mse_new_apps = mean_squared_error(train_data_new_apps['sentPrice'], y_pred_new_apps)\n",
-    "print(\"new apps mse is: \",mse_new_apps)\n",
-    "\n",
-    "# Optionally, you can also print feature importances\n",
-    "feature_importances = model.feature_importances_\n",
-    "print(\"Feature Importances:\", feature_importances)"
+    "    return model, training_rmse, val_rmse, test_rmse\n"
    ]
   },
   {
@@ -586,7 +595,7 @@
    "source": [
     "(7) Conclusions\n",
     "It was found that ...\n",
-    "It's worth examining additional models except XGBOOST "
+    "It's worth examining additional models except XGBOOST\n"
    ]
   }
  ],
