--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -2,24 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2acc6171-a93c-4fc5-bb8d-7f63daa2aab5",
    "metadata": {
     "is_executing": true
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'requests'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mrequests\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msqlalchemy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_engine\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json, requests, time\n",
     "from sqlalchemy import create_engine\n",
@@ -437,12 +425,12 @@
     "    # Select apps that have a low appearance percentage\n",
     "    low_representation_apps = grouped_stats[grouped_stats[\"percentage\"]<low_appearance_apps_percantage_threshold]\n",
     "\n",
+    "    # Make a list of the selected apps\n",
+    "    low_representation_apps = low_representation_apps.index.tolist()\n",
     "\n",
     "    # Select random apps for validation and test sets\n",
     "    validation_apps = random.sample(low_representation_apps, apps_for_validation)\n",
     "    test_apps = random.sample(low_representation_apps, apps_for_test)\n",
-    "\n",
-    "    # I need to make sure I remove the validation and test apps from the training set\n",
     "\n",
     "    return validation_apps, test_apps\n",
     "\n",
@@ -587,6 +575,14 @@
     "        \n",
     "cluster_apps_by_similarity(cos_sim_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bac2f20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
