update the apps assignment function

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -374,7 +374,7 @@
     "\n",
     "(b) I will randomly some of the low appearance apps to the validation and testing data\n",
     "\n",
-    "(c)\n"
+    "(c) Clustering the apps based on cosine similarity +  generate one hot encoding feature for each cluster\n"
    ]
   },
   {
@@ -438,6 +438,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f8f304d",
+   "metadata": {},
+   "source": [
+    "# Split data for training, validationa and testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "853b11fc",
@@ -496,7 +504,7 @@
    "id": "476a6001",
    "metadata": {},
    "source": [
-    "# Train the XGBOOST model without considering the apps' embeddings\n"
+    "# Train the XGBOOST model without considering the apps' embeddings"
    ]
   },
   {
@@ -516,6 +524,8 @@
     "\n",
     "    # Make predictions on the training set\n",
     "    y_pred_train = model.predict(X_train)\n",
+    "\n",
+    "    # Evaluate the model on training set\n",
     "    training_rmse = np.sqrt(mean_squared_error(y_train, y_pred_train))\n",
     "    print(\"Training Root Mean Squared Error:\", training_rmse)\n",
     "\n",
@@ -533,7 +543,9 @@
     "    test_rmse = np.sqrt(mean_squared_error(y_test, y_pred_test))\n",
     "    print(\"Test Root Mean Squared Error:\", test_rmse)\n",
     "\n",
-    "    return model, training_rmse, val_rmse, test_rmse\n"
+    "    return model, training_rmse, val_rmse, test_rmse\n",
+    "\n",
+    "model, training_rmse, val_rmse, test_rmse = train_model(X_train, X_val, X_test, y_train, y_val, y_test)"
    ]
   },
   {
