--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -374,7 +374,21 @@
     "\n",
     "(b) I will randomly some of the low appearance apps to the validation and testing data\n",
     "\n",
-    "(c) Clustering the apps based on cosine similarity +  generate one hot encoding feature for each cluster\n"
+    "(c) Training a model without the apps' embeddings\n",
+    "\n",
+    "(d) Clustering the apps based on cosine similarity + generate one hot encoding feature for each cluster\n",
+    "\n",
+    "(e) Train a model with the app's embeddings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fe40bc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4a. Split the data into training, validation and test sets"
    ]
   },
   {
@@ -406,6 +420,14 @@
     "    return df\n",
     "\n",
     "df = timestamp_to_features(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b41b894",
+   "metadata": {},
+   "source": [
+    "# 4.b Randomly assign 2 unique apps for the validation and 2 for the testing"
    ]
   },
   {
@@ -442,7 +464,7 @@
    "id": "4f8f304d",
    "metadata": {},
    "source": [
-    "# Split data for training, validationa and testing"
+    "# 4.c Split data for training, validationa and testing"
    ]
   },
   {
