update target var

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -500,9 +500,9 @@
     "    X_test = X_test.sample(frac=1, random_state=42)\n",
     "\n",
     "    # Extract the target \n",
-    "    y_train = X_train.pop('bidPrice')\n",
-    "    y_val = X_val.pop('bidPrice')\n",
-    "    y_test = X_test.pop('bidPrice')\n",
+    "    y_train = X_train.pop('bidFloorPrice')\n",
+    "    y_val = X_val.pop('bidFloorPrice')\n",
+    "    y_test = X_test.pop('bidFloorPrice')\n",
     "\n",
     "    # Calculate the proportion of each set\n",
     "    train_proportion = len(X_train) / len(df)\n",
