fix the data split function

--- a/nb/predicting_price_based_on_embeddings.ipynb
+++ b/nb/predicting_price_based_on_embeddings.ipynb
@@ -432,10 +432,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ea22b501",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'grouped_stats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 22\u001b[0m\n\u001b[1;32m     18\u001b[0m     test_apps \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39msample(low_representation_apps, apps_for_test)\n\u001b[1;32m     20\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m validation_apps, test_apps\n\u001b[0;32m---> 22\u001b[0m validation_apps, test_apps \u001b[38;5;241m=\u001b[39m select_apps_for_validation_and_test(\u001b[43mgrouped_stats\u001b[49m, apps_for_validation, apps_for_test)\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# print the selected apps\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValidation apps: \u001b[39m\u001b[38;5;124m\"\u001b[39m, validation_apps)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'grouped_stats' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# hyperparameters for picking the apps for validation and test sets\n",
     "low_appearance_apps_percantage_threshold = 5 # 5%\n",
@@ -450,13 +462,20 @@
     "    # Make a list of the selected apps\n",
     "    low_representation_apps = low_representation_apps.index.tolist()\n",
     "\n",
+    "    # Shuffle list:\n",
+    "    random.shuffle(low_representation_apps)\n",
+    "\n",
     "    # Select random apps for validation and test sets\n",
-    "    validation_apps = random.sample(low_representation_apps, apps_for_validation)\n",
-    "    test_apps = random.sample(low_representation_apps, apps_for_test)\n",
+    "    validation_apps = low_representation_apps[:apps_for_validation]\n",
+    "    test_apps = low_representation_apps[apps_for_validation: apps_for_validation + apps_for_test]\n",
     "\n",
     "    return validation_apps, test_apps\n",
     "\n",
-    "validation_apps, test_apps = select_apps_for_validation_and_test(grouped_stats, apps_for_validation, apps_for_test)"
+    "validation_apps, test_apps = select_apps_for_validation_and_test(grouped_stats, apps_for_validation, apps_for_test)\n",
+    "\n",
+    "# print the selected apps\n",
+    "print(\"Validation apps: \", validation_apps)\n",
+    "print(\"Test apps: \", test_apps)"
    ]
   },
   {
@@ -475,7 +494,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def prepare_data_for_training(df,validation_apps,test_apps):\n",
+    "def prepare_data_for_training(df,columns_to_use,validation_apps,test_apps):\n",
     "    \n",
     "    # Split the dataset into 80% training and 20% temporary sets\n",
     "    X_train_temp, X_test = train_test_split(df, test_size=0.2, random_state=42)\n",
@@ -483,6 +502,7 @@
     "    # Further split the temporary set into 70% training and 10% validation sets\n",
     "    X_train, X_val = train_test_split(X_train_temp, test_size=0.125, random_state=42)\n",
     "\n",
+    "    print(X_train)\n",
     "    # move the validation and test apps to the validation and test sets\n",
     "    # Filter records associated with validation apps from the training set\n",
     "    train_data_validation_apps = X_train[X_train['bundleId'].isin(validation_apps)]\n",
@@ -513,12 +533,17 @@
     "    print(\"Proportion of validation data:\", round(val_proportion,4)*100)\n",
     "    print(\"Proportion of test data:\", round(test_proportion,4)*100)\n",
     "\n",
+    "    # select only the columns_to_use for the training, validation and testing \n",
+    "    X_train = X_train[columns_to_use]\n",
+    "    X_val = X_val[columns_to_use]\n",
+    "    X_test = X_test[columns_to_use]\n",
+    "\n",
     "    return X_train, X_val, X_test, y_train, y_val, y_test\n",
     "\n",
     "\n",
     "# Select specific columns for training\n",
     "columns_to_use = ['bidFloorPrice', 'year', 'month', 'day', 'hour', 'minute', 'second', 'day_of_week']\n",
-    "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df[columns_to_use])"
+    "X_train, X_val, X_test, y_train, y_val, y_test = prepare_data_for_training(df[columns_to_use],validation_apps, test_apps)"
    ]
   },
   {
@@ -571,6 +596,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3583f199",
+   "metadata": {},
+   "source": [
+    "# 4.d - Clustering the apps' embedding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e4c14800",
@@ -579,11 +612,18 @@
    "source": [
     "# Now, lets create clusters of the embeddings\n",
     "\n",
-    "def cluster_apps_by_similarity(cos_sim_df):\n",
+    "def cluster_apps_by_similarity(cos_sim_df,apps_to_exclude = []):\n",
+    "\n",
+    "    treshold_for_similarity = 0.7\n",
+    "    \n",
     "    clusters = {}  # Dict to store clusters\n",
     "    cluster_counter = 0  # Counter for cluster numbers\n",
     "\n",
+    "    # filter rows and columns based on the apps to exclude\n",
+    "    cos_sim_df = cos_sim_df.drop(columns=apps_to_exclude, index=apps_to_exclude)\n",
+    "\n",
     "    for current_app, row in cos_sim_df.iterrows():\n",
+    "\n",
     "        if any(current_app in apps for apps in clusters.values()):\n",
     "            continue\n",
     "            \n",
@@ -606,8 +646,9 @@
     "            clusters[cluster_counter] = [max_similarity_app, current_app]\n",
     "\n",
     "    return clusters\n",
-    "        \n",
-    "cluster_apps_by_similarity(cos_sim_df)"
+    "apps_to_exclude = validation_apps + test_apps\n",
+    "\n",
+    "cluster_apps_by_similarity(cos_sim_df,apps_to_exclude)"
    ]
   },
   {
@@ -625,7 +666,9 @@
    "source": [
     "(7) Conclusions\n",
     "It was found that ...\n",
-    "It's worth examining additional models except XGBOOST\n"
+    "* It's worth examining additional models except XGBOOST\n",
+    "* Maybe the threshold of clustering the embeding wasn't high enough\n",
+    "* Maybe I should use a different method which is not rely on embedings"
    ]
   }
  ],
